--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ html {
 }
 
 p {
-  color: rgb(85, 85, 85);
+  color: rgb(132, 130, 130);
 }
 
 /* TRANSITION */
@@ -25,6 +25,10 @@ a,
 .btn {
   transition: all 300ms ease;
 }
+
+
+
+
 
 /* DESKTOP NAV */
 
@@ -52,7 +56,7 @@ a {
 }
 
 a:hover {
-  color: grey;
+  color: rgb(249, 249, 249);
   text-decoration: underline;
   text-underline-offset: 1rem;
   text-decoration-color: rgb(181, 181, 181);
@@ -63,7 +67,7 @@ a:hover {
 }
 
 .logo:hover {
-  cursor: default;
+  cursor: pointer;
 }
 
 /* HAMBURGER MENU */
@@ -85,11 +89,45 @@ a:hover {
   width: 30px;
   cursor: pointer;
 }
+#mode {
+  position: fixed;
+  bottom: 0;
+  right: 0%;
+  z-index: 99;
+  background-color: rgba(26, 63, 63, 0.053);
+  padding: 2px;
+  border-radius: 7px;
+}
+
+.mode-button {
+  border: none;
+  padding: 10px 25px;
+  font-size: 16px;
+  border-radius: 7px;
+  cursor: pointer;
+}
+
+.dark-mode {
+  background-color: #121212;
+  color: white;
+}
+
+.light-mode {
+  background-color: #f1f1f1;
+  color: black;
+}
+
+@media (max-width: 768px) {
+  .mode-button {
+      padding: 8px 16px;
+      font-size: 14px;
+  }
+}
 
 .hamburger-icon span {
   width: 100%;
   height: 2px;
-  background-color: black;
+  background-color: rgb(80, 207, 38);
   transition: all 0.3 ease-in-out;
 }
 
@@ -97,11 +135,11 @@ a:hover {
   position: absolute;
   top: 100%;
   right: 0;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.979);
   width: fit-content;
   max-height: 0;
   overflow: hidden;
-  transition: all 0.3 ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .menu-links a {
@@ -111,7 +149,7 @@ a:hover {
   font-size: 1.5rem;
   color: black;
   text-decoration: none;
-  transition: all 0.3 ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .menu-links li {
@@ -145,6 +183,7 @@ a:hover {
 .hamburger-icon span:first-child {
   transform: none;
 }
+
 
 /* SECTIONS */
 
